Created a footer for Wildlife website

--- a/index.html
+++ b/index.html
@@ -29,5 +29,60 @@
        <h3>Enjoy <span class="auto-input"></span></h3>
     </div>
  </section>
+
+
+
+
+
+
+ 
+ <!--footer-->
+ <section class="footer">
+   <div class="box-container">
+       <div class="box">
+           <h3><i class="fa fa-paw" aria-hidden="true"></i>Zoo</h3>
+           <p id="ded">Dedicated to conservation <br> and preservation</p>
+           <p class="links"><i class="fas fa-clock-o" aria-hidden="true"></i>Everyday</p>
+           <p class="days">7:00AM - 6:00PM</p>
+       </div>
+       <div class="box">
+           <h3>Contact Info</h3>
+           <p><a href="#" class="links"><i class="fas fa-phone"></i>+254 8129873193</a></p>
+          <p><a href="#" class="links"><i class="fas fa-phone"></i>+254 8129873193</a></p>
+           <p><a href="#" class="links"><i class="fas fa-envelope"></i>zoo@gmail.com</a></p>
+           <p><a href="#" class="links"><i class="fas fa-marker-alt"></i>Nairobi, Kenya</a></p>
+       </div>
+       <div class="box">
+           <h3>Quick links</h3>
+           <a href="#home" class="links"><i class="fas fa-arrow-right"></i>home</a>
+           <a href="#apes" class="links"><i class="fas fa-arrow-right"></i>apes</a>
+           <a href="#bigfive" class="links"><i class="fas fa-arrow-right"></i>bigfive</a>
+           <a href="#cats" class="links"><i class="fas fa-arrow-right"></i>cats</a>
+           <!-- <a href="#" class="links"><i class="fas fa-arrow-right"></i>rhino</a> -->
+       </div>
+       <div class="box">
+           <h3>newsletter</h3>
+           <p>subscribe for latest updates</p>
+           <input type="email" placeholder="Your Email" class="Email">
+           <br><br>
+           <button class="btn"><a href="#" class="btn">subscribe</a></button>
+           <div class="share">
+               <i class="fa fa-facebook" aria-hidden="true"></i>
+               <i class="fa fa-twitter" aria-hidden="true"></i>
+               <i class="fa fa-instagram" aria-hidden="true"></i>
+               <i class="fa fa-linkedin" aria-hidden="true"></i>
+           </div>
+       </div>
+   </div>
+   <div class="credit">&copy;2022 zoolife. All rights reserved by kws </div>
+</section>
+<!-- scroll reveal    -->
+<script src="https://unpkg.com/scrollreveal"></script>
+<script src="https://unpkg.com/scrollreveal"></script>
+<!-- typed js    -->
+<script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+<!-- <script src="https://unpkg.com/typed.js@2.0.1.6/dist/typed.umd.js"></script> -->
+<script src="style2.js"></script>
+ <!--end-->
 </body>
 </html>
