created apes section

--- a/index.html
+++ b/index.html
@@ -29,5 +29,92 @@
        <h3>Enjoy <span class="auto-input"></span></h3>
     </div>
  </section>
+ <!-- <--Apes-->
+ <section class="apes" id="apes" >
+   <div class="slider2">
+       <ul>
+           <li>
+               <img src="/images/greg-gollin-i3srrRDsJEs-unsplash.jpg" alt=""><span class="gorilla"></span>
+           </li>
+           <li>
+               <img src="/images/kelly-sikkema-r077pfFsdaU-unsplash.jpg" alt=""><span class="chimpanzie"></span>
+           </li>
+           <li>
+               <img src="/images/patrick-beznoska-4P702ZWSrHI-unsplash.jpg" alt=""><span class="bonnet"></span>
+           </li>
+       </ul>
+   </div>
+</section>
+ <!-- <--Birds-->
+ <section class="birds" id="birds" >
+   <div class="slider1">
+       <ul>
+           <li>
+               <img src="/images/image (10).png" alt=""><span class="red"></span>
+           </li>
+           <li>
+               <img src="/images/image (11).png" alt=""><span class="parrot"></span>
+           </li>
+           <li>
+               <img src="/images/image (20).png" alt=""><span class="mandarin "></span>
+           </li>
+           <li>
+               <img src="/images/image (13).png" alt=""><span class="Hoopoea"></span>
+           </li>
+           <li>
+               <img src="/images/image (14).png" alt="">
+           </li>
+           <li>
+               <img src="/images/image (15).png" alt="">
+           </li>
+           <li>
+               <img src="/images/image (16).png" alt="">
+           </li>
+           <li>
+               <img src="/images/image (8).png" alt="">
+           </li>
+           <li>
+               <img src="/images/image (9).png" alt="">
+           </li>
+       </ul>
+   </div>
+</section>
+
+
+
+
+
+7:04
+<!-- <--Zebra-->
+ <section class="zebra" id="zebra" >
+   <div class="slider3">
+       <ul>
+           <li>
+               <img src="/images/ron-dauphin-UgidX4V13Gc-unsplash.jpg" alt="">
+           </li>
+           <li>
+               <img src="/images/george-brits-wvO5tPfTpug-unsplash.jpg" alt="">
+           </li>
+           <li>
+               <img src="/images/zeb.jpeg" alt="">
+           </li>
+           <li>
+               <img src="/images/zebr.jpeg" alt="">
+           </li>
+           <li>
+               <img src="/images/zebra.jpeg" alt="">
+           </li>
+           <li>
+               <img src="/images/zee.jpeg" alt="">
+           </li>
+           <li>
+               <img src="/images/zeeeee.jpeg" alt="">
+           </li>
+           <li>
+               <img src="/images/zeeeeeee.jpeg" alt="">
+           </li>
+       </ul>
+   </div>
+</section>
 </body>
 </html>
