Created the about us section for the wildlife website

--- a/index.html
+++ b/index.html
@@ -29,5 +29,36 @@
        <h3>Enjoy <span class="auto-input"></span></h3>
     </div>
  </section>
+ <!-- About -->
+ <section class="about" id="about">
+   <div class="slider8">
+       Enjoy<span class="videos"></span>
+       <video autoplay muted loop id="myVideo">
+           <source src="/images/158980 (1080p).mp4">
+         </video>
+</div>
+</section>
+<!-- //.....cats....// -->
+<section class="cats" id="cats" >
+<div class="slider">
+   <ul>
+       <li>
+          <img src="images/lion.jpg" alt=""><span class="lion"></span>
+       </li>
+       <li>
+           <img src="/images/image (19).png" alt=""><span class="cheetah"></span>
+       </li>
+       <li>
+           <img src="/images/tiger2.jpeg" alt=""><span class="Tiger"></span>
+       </li>
+       <li>
+           <img src="/images/image (7).png" alt=""><span class="Jaguar"></span >
+       </li>
+       <li>
+           <img src="/images/image (6).png" alt=""><span class="Leopard"></span>
+       </li>
+   </ul>
+   </div>
+   </section>
 </body>
 </html>
